syntax = "proto3";

package email.configuration.movedletter;

import "google/protobuf/empty.proto";
import "models.proto";

option java_multiple_files  = true;
option java_package         = "com.seeyaa.proto.email.configuration.movedletter";
option java_outer_classname = "MovedLetterConfigurationProto";

message SetLetterTypeRequest {
  string letter_id         = 1;
  string email             = 2;
  models.TypeOfLetter type = 3;
}

service MovedLetterConfiguration {
  rpc SetLetterType (SetLetterTypeRequest) returns (google.protobuf.Empty);
}